# kilted-libpython-bug

./: .gitignore  CMakeLists.txt  README.md  package.xml  pixi.toml
src/: lib.cpp  main.cpp
