<?xml version="1.0"?>
<package format="3">
  <name>kilted-libpython-bug</name>
  <version>0.0.1</version>
  <description>Minimal reproduction of robostack-kilted libpython bug</description>
  <maintainer email="test@test.com">test</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
